set(GAME_SOURCES
	../qcommon/shared/m_flash.c
	../qcommon/shared/q_shared.c
	dm_ball.c
	dm_tag.c
	g_ai.c
	g_camera.c
	g_chase.c
	g_combat.c
	g_crane.c
	g_fog.c
	g_items.c
	g_jetpack.c
	g_lights.c
	g_lock.c
	g_mappack.c
	g_misc.c
	g_monster.c
	g_newai.c
	g_newdm.c
	g_newfnc.c
	g_newtarg.c
	g_newtrig.c
	g_newutils.c
	g_newweap.c
	g_patchplayermodels.c
	g_pendulum.c
	g_phys.c
	g_sphere.c
	g_svcmds.c
	g_thing.c
	g_tracktrain.c
	g_trigger.c
	g_turret.c
	g_vehicle.c
	g_weapon.c
	grenade.c
	km_cvar.c
	monster/m_actor.c
	monster/m_actor_weap.c
	monster/m_berserk.c
	monster/m_boss2.c
	monster/m_boss3.c
	monster/m_boss31.c
	monster/m_boss32.c
	monster/m_boss5.c
	monster/m_brain.c
	monster/m_brainbeta.c
	monster/m_carrier.c
	monster/m_chick.c
	monster/m_dog.c
	monster/m_fixbot.c
	monster/m_flipper.c
	monster/m_float.c
	monster/m_flyer.c
	monster/m_gekk.c
	monster/m_gladb.c
	monster/m_gladiator.c
	monster/m_gunner.c
	monster/m_hover.c
	monster/m_infantry.c
	monster/m_insane.c
	monster/m_medic.c
	monster/m_move.c
	monster/m_mutant.c
	monster/m_parasite.c
	monster/m_soldier.c
	monster/m_stalker.c
	monster/m_supertank.c
	monster/m_tank.c
	monster/m_turret.c
	monster/m_widow.c
	monster/m_widow2.c
	no_fmod/g_cmds.c
	no_fmod/g_func.c
	no_fmod/g_main.c
	no_fmod/g_save.c
	no_fmod/g_spawn.c
	no_fmod/g_target.c
	no_fmod/g_utils.c
	no_fmod/p_view.c
	player/p_chasecam.c
	player/p_client.c
	player/p_hud.c
	player/p_menu.c
	player/p_text.c
	player/p_trail.c
	player/p_weapon.c
	z_anim.c
	z_sentien.c
)

add_definitions(-DDISABLE_FOG)
add_library(mpgamex86 MODULE ${GAME_SOURCES})
set_target_properties(mpgamex86 PROPERTIES PREFIX "")
target_compile_options(mpgamex86 PRIVATE -fvisibility=hidden)
