set(GAME_SOURCES
	../qcommon/shared/m_flash.c
	../qcommon/shared/q_shared.c
	dm_ball.c
	dm_tag.c
	g_ai.c
	g_camera.c
	g_chase.c
	g_combat.c
	g_crane.c
	g_fog.c
	g_items.c
	g_jetpack.c
	g_lights.c
	g_lock.c
	g_mappack.c
	g_misc.c
	g_monster.c
	g_newai.c
	g_newdm.c
	g_newfnc.c
	g_newtarg.c
	g_newtrig.c
	g_newutils.c
	g_newweap.c
	g_patchplayermodels.c
	g_pendulum.c
	g_phys.c
	g_sphere.c
	g_svcmds.c
	g_thing.c
	g_tracktrain.c
	g_trigger.c
	g_turret.c
	g_vehicle.c
	g_weapon.c
	g_cmds.c
	g_func.c
	g_main.c
	g_save.c
	g_spawn.c
	g_target.c
	g_utils.c
	grenade.c
	km_cvar.c
	monster/m_actor.c
	monster/m_actor_weap.c
	monster/m_berserk.c
	monster/m_boss2.c
	monster/m_boss3.c
	monster/m_boss31.c
	monster/m_boss32.c
	monster/m_boss5.c
	monster/m_brain.c
	monster/m_brainbeta.c
	monster/m_carrier.c
	monster/m_chick.c
	monster/m_dog.c
	monster/m_fixbot.c
	monster/m_flipper.c
	monster/m_float.c
	monster/m_flyer.c
	monster/m_gekk.c
	monster/m_gladb.c
	monster/m_gladiator.c
	monster/m_gunner.c
	monster/m_hover.c
	monster/m_infantry.c
	monster/m_insane.c
	monster/m_medic.c
	monster/m_move.c
	monster/m_mutant.c
	monster/m_parasite.c
	monster/m_soldier.c
	monster/m_stalker.c
	monster/m_supertank.c
	monster/m_tank.c
	monster/m_turret.c
	monster/m_widow.c
	monster/m_widow2.c
	player/p_view.c
	player/p_chasecam.c
	player/p_client.c
	player/p_hud.c
	player/p_menu.c
	player/p_text.c
	player/p_trail.c
	player/p_weapon.c
	z_anim.c
	z_sentien.c
)

set(GAME_HEADERS
	../qcommon/shared/q_shared.h
	fmod.h
	game.h
	km_cvar.h
	laz_misc.h
	menu.h
	monster/m_actor.h
	monster/m_berserk.h
	monster/m_boss2.h
	monster/m_boss31.h
	monster/m_boss32.h
	monster/m_brain.h
	monster/m_carrier.h
	monster/m_chick.h
	monster/m_dog.h
	monster/m_fixbot.h
	monster/m_flipper.h
	monster/m_float.h
	monster/m_flyer.h
	monster/m_gekk.h
	monster/m_gladiator.h
	monster/m_gunner.h
	monster/m_hover.h
	monster/m_infantry.h
	monster/m_insane.h
	monster/m_medic.h
	monster/m_mutant.h
	monster/m_parasite.h
	monster/m_player.h
	monster/m_rider.h
	monster/m_soldier.h
	monster/m_soldierh.h
	monster/m_stalker.h
	monster/m_supertank.h
	monster/m_tank.h
	monster/m_turret.h
	monster/m_widow.h
	monster/m_widow2.h
	g_local.h
	resource.h
	pak.h
	player/p_menu.h
	player/p_text.h
	tables/clientfields.h
	tables/fields.h
	tables/gamefunc_decs.h
	tables/gamefunc_list.h
	tables/gamemmove_decs.h
	tables/gamemmove_list.h
	tables/levelfields.h
	z_anim.h
	z_sentien.h
)

add_definitions(-DDISABLE_FOG -DROGUE_GRAVITY)
add_library(mpgamex86 MODULE ${GAME_SOURCES} ${GAME_HEADERS})
set_target_properties(mpgamex86 PROPERTIES PREFIX "")
target_compile_options(mpgamex86 PRIVATE -fvisibility=hidden)
